# eolify

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: throughput.rs  to_dos.rs  to_unix.rs
examples/: normalize_str.rs  sync_file_convert.rs  tokio_file_convert.rs
fuzz/: Cargo.toml
fuzz/corpus/crlf/: all_cr_last_was_cr  all_cr_last_was_cr_is_last_chunk_undersize  all_lf_is_last_chunk_undersize  all_lf_last_was_cr_undersize  mixed  mixed_is_last_chunk  mixed_is_last_chunk_undersize  mixed_last_was_cr  mixed_last_was_cr_is_last_chunk  mixed_last_was_cr_is_last_chunk_undersize  mixed_last_was_cr_undersize  mixed_undersize  no_line_endings  no_line_endings_is_last_chunk  no_line_endings_is_last_chunk_undersize  no_line_endings_last_was_cr  no_line_endings_last_was_cr_is_last_chunk  no_line_endings_last_was_cr_is_last_chunk_undersize  no_line_endings_last_was_cr_undersize  no_line_endings_undersize
fuzz/corpus/lf/: all_cr_is_last_chunk
fuzz/fuzz_targets/: crlf.rs  lf.rs
src/: async_io.rs  crlf.rs  helpers.rs  io.rs  lib.rs  types.rs
src/async_io/: crlf.rs  mod.rs  read.rs
src/async_io/futures_io/: crlf.rs  mod.rs
src/async_io/tokio/: mod.rs
src/core/: async_io.rs  crlf.rs  mod.rs
src/formats/: crlf.rs  lf.rs  mod.rs
src/futures_io/: crlf.rs  mod.rs
src/io/: crlf.rs  mod.rs
src/tokio/: mod.rs
src/wrappers/: async_core.rs  futures_io.rs  io.rs  mod.rs  tokio.rs
tests/: crlf_async_reader.rs  crlf_async_writer.rs  crlf_normalize.rs  crlf_normalize_chunk.rs  crlf_normalize_str.rs  crlf_prop_test.rs  crlf_reader.rs  crlf_writer.rs  lf_async_reader.rs  lf_async_writer.rs  lf_normalize.rs  lf_normalize_chunk.rs  lf_normalize_str.rs  lf_prop_test.rs  lf_reader.rs  lf_writer.rs  prop_test.rs
tests/helpers/: mod.rs
