[package]
name = "eolify"
version = "0.1.1"
edition = "2021"
authors = ["Mark Swaanenburg"]
license = "MIT/Apache-2.0"
keywords = ["eol", "newline", "line-endings", "crlf"]
categories = ["encoding", "text-processing"]
readme = "README.md"
documentation = "https://docs.rs/eolify"
repository = "https://github.com/cygnus9/eolify"
homepage = "https://github.com/cygnus9/eolify"
description = """
High-performance line ending normalization for Rust.
"""

[dependencies]
memchr = "2.7"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "throughput"
harness = false
