[package]
name = "eolify-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.eolify]
path = ".."

[[bin]]
name = "crlf"
path = "fuzz_targets/crlf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lf"
path = "fuzz_targets/lf.rs"
test = false
doc = false
bench = false
